# dnfile-rs

./: .gitignore  Cargo.toml  README.md
examples/: dnfile.rs
src/: error.rs  lib.rs  utils.rs
src/cil/cil/: enums.rs  exception.rs  instruction.rs  mod.rs  opcode.rs
src/cil/cil/function/: flags.rs  mod.rs  reader.rs
src/cil/clr/: argument.rs  local.rs  mod.rs  token.rs
src/lang/: mod.rs
src/lang/cil/: enums.rs  exception.rs  instruction.rs  opcode.rs
src/lang/cil/function/: flags.rs  mod.rs  reader.rs
src/lang/clr/: argument.rs  local.rs  token.rs
src/stream/: blob_heap.rs  generic_stream.rs  guid_heap.rs  meta_data_tables.rs  mod.rs  string_heap.rs  user_string_heap.rs
src/stream/meta_data_tables/: mod.rs
src/stream/meta_data_tables/mdtables/: codedindex.rs  enums.rs  mod.rs
