[package]
name = "dnfile"
version = "0.2.0"
description = ".NET binary extractor"
authors = ["Andrey Mnatsakanov <andrey@3ig.kiev.ua>"]
keywords = [".NET", "binary", "extractor", "file"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
regex = "1.5.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"
walkdir = "2.3.2"
clap = { version = "3.1.6", features = ["cargo", "derive"] }
serde_json = "1"
goblin = { version = "0.5.1", features = ["alloc"] }
bincode = "1.3.3"
scroll = "0.11.0"
uuid = "0.8"
byteorder = "1.4.3"

[lib]
name = "dnfile"
path = "src/lib.rs"
