[package]
name = "dnfile"
version = "0.2.2"
description = ".NET binary extractor"
authors = ["Marirs <marirs@gmail.com>", "Andrey Mnatsakanov <andrey@3ig.kiev.ua>"]
keywords = [".NET", "binary", "extractor", "file"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[dependencies]
regex = "1.5.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"
walkdir = "2.3.2"
clap = { version = "4.0.27", features = ["cargo", "derive"] }
serde_json = "1"
goblin = { version = "0.8.0", features = ["alloc"] }
bincode = "1.3.3"
scroll = "0.12.0"
uuid = "1.2.2"
byteorder = "1.4.3"

[lib]
name = "dnfile"
path = "src/lib.rs"
